Add gradient for key

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         </div>
         <div id="console">
             <div class='session' id='sliderbar'>
-                <h1>Map title</h1>
                 <h2>Year: <label id='active-year'>2015</label></h2>
-                <p id="instructions">Drag the slider to see afforestation by 1990 and beyond</p>
-                <input id='slider' autocomplete="off" class='row' type='range' min='2011' max='2015' step='1' value='2015' />
+                <p id="instructions">Drag the slider to see how flood risk is projected to change</p>
+                <input id='slider' autocomplete="off" class='row' type='range' min='2000' max='2100' step='10' value='2050' />
+            </div>
+            <div class='session'>
+                <div class='row colors'></div>
             </div>
         </div>
         <script src="js/script.js"></script>
