Add popup :sparkles:

--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
         <div id="map">
             <div id="adb"><i class="fa fa-info-circle" aria-hidden="true"></i><p>Map tiles failed to load. This might be because:<ul><li>Your adblocker is preventing the map tiles from rendering. Please try whitelisting this site and refreshing the page.</li><li>Your browser does not support WebGL. Please upgrade or reopen this link in a modern web browser, such as Firefox (version 4.0+), Chrome (version 9.0+) or Safari (version 6.0+).</li></ul></p></div>
         </div>
+        <div id="title"><h1>Flood risk to mediterranean UNESCO world heritage sites</h1></div>
         <div id="console">
             <div class='session' id='sliderbar'>
-                <p id="instructions">Drag the slider to see how flood risk is projected to change</p>
+                <p class="instructions">Drag the slider to see how flood risk is projected to change</p>
                 <h2>Year: <label id='active-year'>2050</label></h2>
                 <input id='slider' autocomplete="off" class='row' type='range' min='2000' max='2100' step='10' value='2050' />
             </div>
             <div class='session'>
                 <div class='row colors'></div>
+                <h2>Scenario: <label id='active-year'>RCP2.6</label></h2>
             </div>
         </div>
         <script src="js/script.js"></script>
