--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="map">
             <div id="adb"><i class="fa fa-info-circle" aria-hidden="true"></i><p>Map tiles failed to load. This might be because:<ul><li>Your adblocker is preventing the map tiles from rendering. Please try whitelisting this site and refreshing the page.</li><li>Your browser does not support WebGL. Please upgrade or reopen this link in a modern web browser, such as Firefox (version 4.0+), Chrome (version 9.0+) or Safari (version 6.0+).</li></ul></p></div>
         </div>
-        <div id="title"><h1>Flood risk to mediterranean UNESCO world heritage sites</h1></div>
+        <div id="title"><h1>Flood risk to Mediterranean Unesco world heritage sites</h1></div>
         <div id="console">
             <div class='session' id='sliderbar'>
                 <p class="instructions">Drag the slider to see how flood risk is projected to change</p>
