HTML title change

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Flood risk at UNESCO sites in the Mediterranean | Carbon Brief</title>
+        <title>A map of the Unesco sites that are at risk of flooding | Carbon Brief</title>
         <meta name="description" content="A map of which UNESCO sites are at risk of flooding">
         <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
         <meta name="author" content="Rosamund Pearce">
